--- a/styles.css
+++ b/styles.css
@@ -49,5 +49,19 @@ padding: 10px;
 
 .grid-container {
     display: grid;
-    grid-template-columns: auto;
+    grid-template-columns: auto auto auto auto auto;
+    padding: 10px
+
+}
+
+.grid-container > div {
+    border: solid 1px;
+
+}
+
+.grid-item21 {
+    grid-column-start: 1;
+    grid-column-end: 4;
+    text-align: end;
+
 }
